# nscompress

./: Cargo.toml  build.rs  build.sh  run.sh  rust-toolchain
src/: alphabet.rs  grammar.rs  irregular_char_set.rs  lib.rs  main.rs  std.rs
src/std/: file.rs
